[package]
name = "exotherm"
version = "0.1.0"
edition = "2024"

[dependencies]
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
thiserror = "2.0.11"
rkyv = { version = "0.8.10", features = ["uuid-1"] }
rand = "0.9.0"
uuid = { version = "1.15.0", features = ["v4"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
